# block-renderer

./: Cargo.toml
res/: shader.wgsl  ui_shader.wgsl
src/: camera.rs  chunk.rs  chunk_manager.rs  instance.rs  lib.rs  main.rs  state.rs  texture.rs  window.rs
src/backend/: mod.rs  state.rs  window.rs
src/bitarrays/: array3d.rs  bitvec.rs  mod.rs
src/primitives/: mod.rs  shapes.rs  vertex.rs
src/render/: intance_manager.rs  mod.rs  pipeline.rs  renderer.rs  set.rs  shader.rs
