[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
deku = "0.16.0"
env_logger = "0.10.0"
glam = { version = "0.24.0", features = ["bytemuck", "fast-math"] }
log = "0.4.19"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.6"
